--- a/testing/test_accuracy.ipynb
+++ b/testing/test_accuracy.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "import evaluate\n",
+    "import Evaluate\n",
     "import Utils\n",
     "import network\n",
     "import matplotlib.pyplot as plt\n",
@@ -24,8 +24,9 @@
    "outputs": [],
    "source": [
     "image_num = 5\n",
-    "model = network.Conv64Features()\n",
-    "D = 20"
+    "trained_model = Utils.load_model('D:/ZAVRSNI/Kodovi/trained_models/lr_0_001_at_first/trained_model.pth')\n",
+    "network.Conv64Features()\n",
+    "D = 100"
    ],
    "metadata": {
     "collapsed": false,
@@ -40,7 +41,7 @@
    "outputs": [],
    "source": [
     "real_disp = Utils.get_disp_image(image_num)\n",
-    "predicted_disp = evaluate.predict_disparity_map(image_num, model, D)"
+    "predicted_disp = Evaluate.predict_disparity_map(image_num, trained_model, D)"
    ],
    "metadata": {
     "collapsed": false,
